# expense-scanner

./: .dockerignore  .env.example  .gitignore  .graphifyignore  Dockerfile  README.md  docker-compose.yml  fly.toml  pyproject.toml
alembic/: env.py
alembic/versions/: 21bae6a1715d_create_receipts.py  30d9b56f46dd_add_category_to_lineitem.py  41e9b56f46de_add_user_and_link_receipt.py
app/: main.py
app/agent/: graph.py  state.py  tools.py
app/api/: api.py  deps.py
app/api/v1/: auth.py  categories.py  receipts.py
app/core/: cloud_storage.py  config.py  security.py
app/db/: base.py
app/models/: receipt.py  user.py
app/schemas/: receipt.py
app/worker/: celery_app.py  tasks.py
docker/localstack/: init-s3.sh
