[project]
name = "expense-scanner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "boto3>=1.43.10",
    "celery[redis]>=5.6.3",
    "fastapi[standard]>=0.136.1",
    "langchain-core>=1.4.0",
    "langchain-openai>=1.2.1",
    "langchain-ollama>=0.2.0",
    "langgraph>=1.2.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "redis>=6.4.0",
    "sqlalchemy>=2.0.49",
]
